fix: Allow line-wrapping of vertical `Tabs` labels

--- a/modules/hanna-css/src/css/Tabs.scss
+++ b/modules/hanna-css/src/css/Tabs.scss
@@ -116,6 +116,7 @@
     margin: 0;
     padding: $var--space-2 $var--space-1;
     padding-left: $var--space-1_5;
+    white-space: normal;
 
     @include keyboardFocus-selector() {
       outline-offset: -3px;
